src/passes/snapshots/lumina2__passes__hir_gen__test__if_else.snap
---
source: src/passes/hir_gen.rs
expression: "If(If { conditions: [(ExpressionId(0), BlockId(0))], otherwise: Some(BlockId(1)) })"
---
Switch(
    Switch {
        discriminator: ExpressionId(
            1,
        ),
        branches: [
            (
                Boolean(
                    true,
                ),
                BlockId(
                    1,
                ),
            ),
        ],
        default: Some(
            BlockId(
                2,
            ),
        ),
    },
)
