src/passes/snapshots/lumina2__passes__hir_gen__test__if_simple.snap
---
source: src/passes/hir_gen.rs
expression: "If(If { conditions: [(ExprId(0), BlockId(0))], otherwise: None })"
---
Switch(
    Switch {
        discriminator: ExprId(
            0,
        ),
        branches: [
            (
                Boolean(
                    true,
                ),
                BlockId(
                    0,
                ),
            ),
        ],
        default: None,
    },
)
