src/passes/snapshots/lumina2__passes__hir_gen__test__literal_boolean.snap
---
source: src/passes/hir_gen.rs
expression: Literal(Boolean(true))
---
Literal(
    Boolean(
        true,
    ),
)
