src/passes/snapshots/lumina2__passes__hir_gen__test__literal_integer.snap
---
source: src/passes/hir_gen.rs
expression: Literal(Integer(123))
---
Literal(
    Integer(
        123,
    ),
)
