src/passes/snapshots/lumina2__passes__hir_gen__test__self_return_type.snap
---
source: src/passes/hir_gen.rs
expression: "FunctionSignature { name: StringId(0), parameters: [], return_ty: Some(AstTypeId(0)) } (Some(U8))"
---
FunctionSignature {
    parameters: [],
    return_ty: TypeId(
        3,
    ),
}
