src/passes/snapshots/lumina2__passes__hir_gen__test__tuple_empty.snap
---
source: src/passes/hir_gen.rs
expression: "Tuple(Tuple { values: [] })"
---
Aggregate(
    Aggregate {
        values: [],
    },
)
