src/passes/snapshots/lumina2__passes__hir_gen__test__unary_simple.snap
---
source: src/passes/hir_gen.rs
expression: "Unary(Unary { op: Negative(Minus), value: ExprId(0) })"
---
Unary(
    Unary {
        op: Negative(
            Minus,
        ),
        value: ExprId(
            0,
        ),
    },
)
