src/passes/snapshots/lumina2__passes__hir_gen__test__variable_simple.snap
---
source: src/passes/hir_gen.rs
expression: "Variable(Variable { variable: StringId(0) })"
---
Variable(
    Variable {
        binding: BindingId(
            0,
        ),
    },
)
